--- a/public/pells/css/pells-paging.css
+++ b/public/pells/css/pells-paging.css
@@ -1,39 +1,58 @@
+/* pell paging */
 .pell-paging {
   padding: 0px;
 }
 
-.pell-paging .paging-container {
-  float: right;
+.pell-paging .paging {
+  position: relative;
+  top: 0px;
+  background-color: #929292;
+  border: 0px;
   padding: 0px;
+  width: 150px;
+  margin: 0px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 2px 2px #BBB;
 }
 
-.pell-paging ul.pagination li a {
+.pell-paging .paging ul.pagination {
+  margin: 0px;
+  font-size: 10px;
+  padding-top: 5px;
+}
+
+.pell-paging .paging ul.pagination li a {
   color: #444;
+  font-size: 70%
 }
 
 .pell-paging ul.pagination li.disabled a {
   color: #999;
 } 
 
-.pell-paging .paging {
-  position: relative;
-  top: 0px;
-  
-  background-color: white;
-  border: 0px;
-  padding: 0px;
-  width: 150px;
-  margin: 0px;
-}
-
-.pell-paging .paging ul {
-  margin: 0px;
-  font-size: 10px;
-}
-
 .pell-paging .paging div.paging-caption {
-  color: #444;
-  text-align: left;
-  padding-left: 15%;
+  color: #eee;
+  text-align: center;
+  margin-top: 12px;
 }
 
+.pell-paging .paging > label.limit-label {
+  color: #eee;
+  background-color: transparent;
+  border: 0px;
+  margin-top: 9px;
+}
+
+.pell-paging .paging > label.limit-label > span {
+  width: 50%;
+  margin-right: 9px;
+}
+
+.pell-paging .paging > label.limit-label > select {
+  width: 50px;
+  display: inline-block;
+  font-size: 12px;
+  height: initial;
+  text-align: center;
+}
