--- a/public/dig/css/paging.css
+++ b/public/dig/css/paging.css
@@ -1,4 +1,3 @@
-/* dig paging css */
 .paging {
   position: fixed;
   top: 300px;
@@ -7,10 +6,10 @@
   background-color: #9d9d9d;
   opacity: 0.85;
   width: 180px;
-  padding: 0px 0px 4px 10px;
   margin-left: 7px;
   color: white;
   z-index: 100;
+  text-align: center;
 }
 
 .pagination a {
@@ -25,16 +24,15 @@
 }
 
 .paging > label.limit-label > span {
-    width: 50%;
-    margin-right: 9px;
+  width: 50%;
+  margin-right: 9px;
 }
 
 .paging > label.limit-label > select {
-    width: 50px;
-    display: inline-block;
-    font-size: 12px;
-    height: initial;
-    text-align: center;
+  display: inline-block;
+  font-size: 12px;
+  height: initial;
+  color: black;
 }
 
 @media screen and (max-width: 770px) {
