--- a/public/playlists/css/playlist.css
+++ b/public/playlists/css/playlist.css
@@ -35,7 +35,6 @@
   color: #777;
 }
 
-
 .action-btn-toolbar {
   padding: 6px;
   height: 44px;
@@ -55,6 +54,16 @@
 
 .page-header .edit-controls {
   margin-left: 12px;
+}
+
+.playlist-description .edit-controls {
+  margin: 10px;
+}
+
+.playlist-description textarea {
+  width: 100%;
+  height: 10em;
+  font-family: Arial;
 }
 
 .tracks-widget .edit-controls {
