--- a/public/playlists/css/playlist.css
+++ b/public/playlists/css/playlist.css
@@ -1,16 +1,109 @@
 /* playlist page */
 
-.playlist-detail-page .playlist-description {
-  margin-top: 13px;
+.playlist-detail-page .paging {
+  margin: 0px auto 12px auto;
+}
+
+.playlist-detail-page .playlist-curator {
+  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 12px;
 }
 
 .playlist-detail-page .playlist-curator span {
-  color: #999;
+  color: black;
 }
 
 .playlist-detail-page .playlist-curator a {
   font-style: italic;
-  color: #555;
+}
+
+.playlist-detail-page .playlist-curator .img-circle {
+  box-shadow: 6px 4px 16px #857254;
+  margin: 5px;
+}
+
+.playlist-detail-page .playlist-curator a span span {
+  display: inline-block;
+  width: 60%;
+  color: white;
+  text-shadow: 1px 1px black;
+  font-size: 16px;
+}
+
+.playlist-detail-page .action-btn-toolbar {
+  padding: 6px;
+  height: 44px;
+  border-radius: 5px;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.playlist-detail-page .action-btn-toolbar .modal {
+  padding: initial;
+  height: initial;
+  border-radius: initial;
+  text-align: initial;
+  margin-bottom: initial;
+}
+
+.playlist-detail-page  .action-btn-toolbar > .btn,
+.playlist-detail-page  .action-btn-toolbar > span > .btn {
+  height: 32px;
+  margin-right: 5px;
+  display: inline-block;
+}
+
+.playlist-detail-page .action-btn-toolbar .btn {
+  height: 32px;
+  margin-right: 5px;
+  display: inline-block;
+}
+
+.playlist-detail-page .playlist-tags {
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 12px;
+}
+
+.playlist-detail-page .playlist-tags a {
+  color: black;
+}
+
+.playlist-detail-page .playlist-tags .edit-controls {
+  margin: 10px;
+}
+
+.playlist-detail-page .playlist-tags a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.playlist-detail-page .playlist-description {
+  margin-bottom: 13px;
+  color: white;
+  text-shadow: 1px 1px #888;;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.playlist-detail-page .playlist-description a {
+  color: brown;
+  font-weight: 400;
+  text-shadow: 0 0 transparent;
+  text-decoration: none;
+}
+
+.playlist-detail-page .playlist-description img {
+  display: block;
+  margin: 16px auto;
+}
+
+.playlist-detail-page .playlist-description textarea {
+  width: 100%;
+  height: 10em;
+  font-family: Arial;
+  color: black;
 }
 
 .static-playlist-tag-editor ul {
@@ -45,11 +138,6 @@
   margin-right: 5px;
 }
 
-.playlist-detail-page .playlist-description img {
-  display: block;
-  margin: 16px auto;
-}
-
 .playlist-detail-page .playlist-tracks > li {
   margin-bottom: 8px;
 }
@@ -67,18 +155,6 @@
   color: #777;
 }
 
-.action-btn-toolbar {
-  padding: 6px;
-  height: 44px;
-  border-radius: 5px;
-}
-
-.action-btn-toolbar .btn {
-  height: 32px;
-  margin-right: 5px;
-  display: inline-block;
-}
-
 .playlist-detail-page .edit-controls .btn span {
   margin: -4px 4px;
   display: inline-block;
@@ -88,14 +164,8 @@
   margin-left: 12px;
 }
 
-.playlist-description .edit-controls {
+.playlist-detail-page .playlist-description .edit-controls {
   margin: 10px;
-}
-
-.playlist-description textarea {
-  width: 100%;
-  height: 10em;
-  font-family: Arial;
 }
 
 .tracks-widget .edit-controls {
