--- a/public/playlists/css/playlist.css
+++ b/public/playlists/css/playlist.css
@@ -4,6 +4,27 @@
   margin: 0px auto 12px auto;
 }
 
+
+.playlist-detail-page .edit-controls .btn span {
+  margin: -4px 4px;
+  display: inline-block;
+}
+
+.playlist-detail-page .page-header .edit-controls {
+  margin-left: 12px;
+}
+
+.playlist-detail-page .page-header .input-group-wrapper {
+  display: inline-block;
+  width: 50%;
+
+}
+
+.playlist-detail-page .page-header .input-group-wrapper  input,
+.playlist-detail-page .page-header .input-group-wrapper  .btn {
+  height: 30px;
+}
+
 .playlist-detail-page .playlist-curator {
   text-align: center;
   border-radius: 5px;
@@ -99,6 +120,10 @@
   margin: 16px auto;
 }
 
+.playlist-detail-page .playlist-description .edit-controls {
+  margin: 10px;
+}
+
 .playlist-detail-page .playlist-description textarea {
   width: 100%;
   height: 10em;
@@ -153,19 +178,6 @@
   margin-left: 8px;
   font-size: 16px;
   color: #777;
-}
-
-.playlist-detail-page .edit-controls .btn span {
-  margin: -4px 4px;
-  display: inline-block;
-}
-
-.page-header .edit-controls {
-  margin-left: 12px;
-}
-
-.playlist-detail-page .playlist-description .edit-controls {
-  margin: 10px;
 }
 
 .tracks-widget .edit-controls {
