bpm display was broken

--- a/public/playlists/css/new.css
+++ b/public/playlists/css/new.css
@@ -130,6 +130,7 @@
   margin-left: 10px;
 }
 
+/*
 .query-options-elements .bpm-display {
   text-align: center;
   display: block;
@@ -138,7 +139,7 @@
 .query-options-elements .bpm-title {
   font-weight: bold;
 }
-
+*/
 
 .track-list {
   padding: 8px;
