delete track from playlist

--- a/public/playlists/css/playlist.css
+++ b/public/playlists/css/playlist.css
@@ -182,6 +182,19 @@
   margin-bottom: 8px;
 }
 
+
+.playlist-detail-page .playlist-tracks > li > .delete-track-button {
+  margin-right: 10px ;
+  font-weight: 200;
+  padding: 4px;
+}
+
+.playlist-detail-page .playlist-tracks > li > .delete-track-button:hover::after {
+  content: 'remove track';
+  margin-left: 5px;
+}
+
+
 .playlist-detail-page .playlist-tracks .track-name {
   margin-left: 8px;
   font-size: 18px;
