--- a/public/playlists/css/playlist.css
+++ b/public/playlists/css/playlist.css
@@ -54,7 +54,6 @@
 
 .playlist-detail-page .action-btn-toolbar {
   padding: 6px;
-  height: 44px;
   border-radius: 5px;
   text-align: center;
   margin-bottom: 12px;
@@ -72,6 +71,7 @@
 .playlist-detail-page  .action-btn-toolbar > span > .btn {
   height: 32px;
   margin-right: 5px;
+  margin-bottom: 5px;
   display: inline-block;
 }
 
