--- a/public/stems/css/stems-tags.css
+++ b/public/stems/css/stems-tags.css
@@ -42,6 +42,7 @@
 
 .stems-browser ul.tags-list > li:hover {
   border: 1px solid black;
+  border-radius: 4px;
 }
 
 .stems-browser ul.tags-list > li > i.fa {
