--- a/public/stems/css/stems-zip-files.css
+++ b/public/stems/css/stems-zip-files.css
@@ -16,4 +16,5 @@ ul.zip-files > li {
   font-size: 14px;
   font-family: "Lucida Console", Monaco, monospace;
   margin-bottom: 5px;
+  color: black;
 }
