--- a/public/ccmixter/css/ccmixter.css
+++ b/public/ccmixter/css/ccmixter.css
@@ -1,238 +1,14 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:500,400,300,200);
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900);
-html, body {
-	background-color: #fff;
-	font-family: "Open Sans", sans-serif;
-	-webkit-text-size-adjust: 100%;
-	margin: 0;
-	padding: 0;
-}
-html a:hover {
-	text-decoration: none;
-}
-/* HEADER */
-.myNav {
-	background: rgba(0,0,0,0.6);
-	background-image: none;
-	color: #fff;
-	-moz-border-radius: 0;
-	-webkit-border-radius: 0;
-	border-radius: 0;
-	border-style: none;
-	z-index: 500;
-	position: fixed;
-	height: 70px;
-	font-size: 16px;
-	font-weight: 400;
-	top: 0;
-	width: 100%;
-}
-.myNav a {
-	font-family: "Open Sans";
-	color: #fffefe;
-	font-size: 18px;
-	font-weight: 300;
-}
-.myNav a:hover {
-	color: #309200;
-	font-family: "Open Sans", sans-serif;
-	font-weight: 300;
-}
-.nav>li>a:focus, .nav>li>a:hover {
-	text-decoration: none;
-	background-color: rgba(0,0,0, 0.0);
-}
-.navbar-nav>li>a {
-	padding: 25px 25px 25px 40px;
-}
-.myNav.navbar-brand, .navbar-nav>li>a {
-	text-shadow: none;
+.top-navbar {
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  z-index: 1000;
+  opacity: 0.9;
 }
 .navbar-brand {
-	background-image: url(/images/logo-ccmixter.png);
-	display: inline-block;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center center;
-	vertical-align: middle;
-	width: 155px;
-	height: 45px;
-	text-indent: -9999em;
-	display: inline-block;
-	text-align: center;
-	margin: 12px 0 0 0;
+  padding-top: 8px;
 }
-.myNav .nav .navbar-nav {
-	margin-bottom: 0;
+.outlet-wrap {
+  padding-top: 70px;
 }
 
-/* FOOTER */
-
-.footer {
-	background-color: #14181f;
-	font-family: "Open Sans";
-	color: #ababab;
-	width: 100%;
-	margin-top: -107px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 60px;
-	padding-right: 60px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-.footer h1 {
-	font-size: 14px;
-	font-weight: 400;
-}
-.footer ul li {
-	list-style-type: none;
-	margin-left: -40px;
-}
-.separator2 {
-	border-top: 1px solid #ababab;
-	height: 5px;
-}
-.disclaimer {
-	width: 100%;
-	color: #ababab;
-	background-color: #0b0e13;
-	font-family: "Open Sans";
-	height: 60px;
-	text-align: center;
-	font-size: 14px;
-	font-weight: 300;
-	padding: 20px;
-}
-
-button {
-    border: none;
-}
-
-#sign-in-here {
-	margin-bottom: 25px;
-}
-#sign-in-here form {
-	font-size: 14px;
-	padding: 8px;
-	border: 1px solid #666;
-	border-radius: 7px;
-}
-#sign-in-here form .form_element {
-	margin-bottom: 7px;
-}
-#form_submit {
-	border-radius: 8px;
-	margin-left: 40%;
-}
-
-#form_submit:hover { 
-	background-color: white;
-}
-
-.form_element span {
-	display: inline-block;
-	width: 40%;
-	text-align: right;
-}
-
-form h3 {
-	width: 100%;
-	font-size: 16px;
-	margin: 0px 0px 12px 0px;
-	background-color: #999;
-	padding: 5px;
-	text-align: center;
-	border-radius: 5px;
-	color: white;
-}
-.lost_password {
-	margin: 13px;
-	display: inline-block;
-}
-
-.ready-to-upload {
-	text-align: center;
-}
-
-.ready-to-upload .signF  {
-	white-space: nowrap;
-}
-
-.ready-to-upload h3 {
-	display: none;
-}
-
-.ready-to-upload span.or {
-	display: block;
-	text-align: center;
-	margin: 12px;
-	font-size: 20px;
-}
-
-.browse-anonymously:active {
-	border: 0px;
-}
-
-.browse-anonymously {
-	width: 250px;
-	margin: 50px auto;
-	color: white;
-	display: block;
-	padding: 11px;
-	border-radius: 19px;
-	box-shadow: 0 2px #003056, inset 0 1px rgba(255,255,255,.75);
-	background-image: -webkit-linear-gradient(bottom, #0086d8, #0086d8);
-	background-image: -moz-linear-gradient(bottom, #0086d8, #0086d8);
-	background-image: -o-linear-gradient(bottom, #0086d8, #0086d8);
-	background-image: -ms-linear-gradient(bottom, #0086d8, #0086d8);
-	background-image: linear-gradient(to top, #0086d8, #0086d8);
-}
-
-.browse-anonymously:hover
-{
-	background-image: -webkit-linear-gradient(bottom, #0086ff, #0086ff);
-	background-image: -moz-linear-gradient(bottom, #0086ff, #0086ff);
-	background-image: -o-linear-gradient(bottom, #0086ff, #0086ff);
-	background-image: -ms-linear-gradient(bottom, #0086f8, #0086f8);
-	background-image: linear-gradient(to top, #0086ff, #0086ff);
-
-}
-
-.signF {
-	margin: 0px auto;
-	width: 290px;
-	height: 55px;
-	-webkit-border-radius: 27px 28px 28px 27px/27px 27px 28px 28px;
-	-moz-border-radius: 27px 28px 28px 27px/27px 27px 28px 28px;
-	border-radius: 27px 28px 28px 27px/27px 27px 28px 28px;
-	background-color: #1f1f27;
-	-webkit-box-shadow: 0 2px #002c50;
-	-moz-box-shadow: 0 2px #002c50;
-	box-shadow: 0 2px #002c50;
-	border: solid 1px #00549f;
-	background-image: -webkit-linear-gradient(bottom, #004176, #0c72b5 74%, #0c72b5);
-	background-image: -moz-linear-gradient(bottom, #004176, #0c72b5 74%, #0c72b5);
-	background-image: -o-linear-gradient(bottom, #004176, #0c72b5 74%, #0c72b5);
-	background-image: -ms-linear-gradient(bottom, #004176, #0c72b5 74%, #0c72b5);
-	background-image: linear-gradient(to top, #004176, #0c72b5 74%, #0c72b5);
-}
-.signF:hover {
-	background-image: -webkit-linear-gradient(bottom, #004176, #004176);
-	background-image: -moz-linear-gradient(bottom, #004176, #004176 74%, #004176);
-	background-image: -o-linear-gradient(bottom, #004176, #004176 74%, #004176);
-	background-image: -ms-linear-gradient(bottom, #004176, #004176 74%, #004176);
-	background-image: linear-gradient(to top, #004176, #004176);
-}
-
-img#faceLogo {
-	margin: 3px 4px 12px 22px;
-}
-span#faceText {
-	margin: 12px;
-}
-.signF span {
-	font-size: 20px;
-	color: #fffefe;
-	text-shadow: 0 2px 2px rgba(0,0,0,.2);
-}
