--- a/public/dig/css/dig-remixes.css
+++ b/public/dig/css/dig-remixes.css
@@ -1,6 +1,3 @@
-.play-list .artist-name > a:hover {
-  border-bottom: 1px dashed;
-}
 
 .play-list > li {
   margin-bottom: 2px;
@@ -8,17 +5,18 @@
   white-space: nowrap;
 }
 
-.song-title > a {
+a.song-title  {
   color: black;  
 }
 
-.song-title > a:hover{
+a.song-title:hover {
   color: #999;
   text-decoration: none;
 }
 
-.artist-name > a:hover{
+a.artist-name:hover {
   text-decoration: none;
+  border-bottom: 1px dashed;
 }
 
 
